# Iot-bot

./: .env-example  pyproject.toml  run.sh
iot_bot/: __main__.py
iot_bot/cogs/: notify.py
